--- a/test_samples/teams_agent/pages/youtube.html
+++ b/test_samples/teams_agent/pages/youtube.html
@@ -49,7 +49,7 @@
     <div class="container">
         <h1>Microsoft Teams Video</h1>
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/X8krAMdGvCQ" 
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/1aXrgLlqdbg?si=O8koR6Sa2JydQHDD" 
                     title="Microsoft Teams" frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen></iframe>
